--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,23 @@
 /* .lan{
   background-color: aqua;
 } */
+td,tr{
+  font-size: 20px;
+  border: 1px solid white;
+  /* border-bottom: 1px solid #ddd; */
+  padding: 5px;
+  
+}
+table {
+  font-size: 20px;
+  /* border-radius: 10px;   */
+  border: 1px solid white;
+  /* width: 100%; */
+  /* border-bottom: 1px solid #ddd; */
+  border-collapse: collapse;
+ 
+}
+tr:hover {
+  background-color: rgb(152, 189, 172);
+}
+/* tr:nth-child(even) {background-color: #f2f2f2;} */
