--- a/src/App.css
+++ b/src/App.css
@@ -43,26 +43,21 @@
   border-radius: 10px;
   background-color: aqua;
 }
-/* .lan{
-  background-color: aqua;
-} */
+
 td,tr{
-  font-size: 20px;
+  font-size: 15px;
   border: 1px solid white;
-  /* border-bottom: 1px solid #ddd; */
   padding: 5px;
   
 }
 table {
   font-size: 20px;
-  /* border-radius: 10px;   */
   border: 1px solid white;
-  /* width: 100%; */
-  /* border-bottom: 1px solid #ddd; */
   border-collapse: collapse;
  
 }
 tr:hover {
   background-color: rgb(152, 189, 172);
+  color:black;
 }
-/* tr:nth-child(even) {background-color: #f2f2f2;} */
+
