--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,9 @@
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
+  background-color: rgb(239, 239, 239);
+}
+.btnn:hover{
   background-color: aqua;
 }
 .btn{
@@ -60,6 +63,13 @@ td,tr{
   padding: 5px;
   
 }
+
+th{
+  font-size: 15px;
+  border: 1px solid white;
+  padding: 15px;
+}
+
 table {
   font-size: 20px;
   border: 1px solid white;
