--- a/src/App.css
+++ b/src/App.css
@@ -41,38 +41,44 @@
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(9, 9, 9);
+  color: white;
+  border-color: aqua;
 }
 .btnn:hover{
   background-color: aqua;
+  color:black;
 }
 .btn{
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(14, 14, 14);
+  color: red;
+  /* border-color: red; */
 }
 
 .btn:hover{
   background-color: red;
+  color:black;
 }
 
 td,tr{
   font-size: 15px;
-  border: 1px solid white;
+  border: 2px solid white;
   padding: 5px;
   
 }
 
 th{
   font-size: 15px;
-  border: 1px solid white;
+  border: 2px solid white;
   padding: 15px;
 }
 
 table {
   font-size: 20px;
-  border: 1px solid white;
+  border: 2px solid white;
   border-collapse: collapse;
  
 }
