--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
-
+.App-nav{
+  text-align:left;
+  background-color: #3d4453;
+}
+.nav{
+  color:antiquewhite;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -15,7 +22,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,10 +51,19 @@
   background-color: rgb(9, 9, 9);
   color: white;
   border-color: aqua;
+  
 }
 .btnn:hover{
   background-color: aqua;
   color:black;
+}
+.btn1{
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(220, 209, 209);
+  color: white;
+  border-color: aqua;
 }
 .btn{
   margin: 10px;
