--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+}
+.active{
+  background-color:rgb(12, 12, 12);
+  color:rgb(235, 18, 18);
 }
 
 code {
